--- a/css/style.css
+++ b/css/style.css
@@ -1,35 +1,60 @@
+*{
+    margin: 0; padding: 0; color: #fff;
+}
+li{
+    list-style-type: none;
+}
+body{
+    background-image: url("../img/bg.png"); font-family: 'Terminal Dosis', sans-serif;
+}
+/*end base*/
+
+.wapper{
+    width: 800px; margin: 0 auto;
+}
 .main{
-    width: 500px;
-    margin: 0 auto;
-    height: 300px;
-    margin-top: 50px;
+    width: 400px; margin: 0 auto; height: 230px; margin-top: 100px;
 }
 .arrow_box{
-    position: relative;
-    background: #88b7d5;
-    border: 4px solid #c2e1f5;
-    height: 300px;
+    position: relative; border: 5px solid #204d74; height: 230px;
+    background: #CDD8E4;
 }
-.arrow_box:after, .arrow_box:before {
-    bottom: 100%;
-    left: 50%;
-    border: solid transparent;
-    content: " ";
-    height: 0;
-    width: 0;
-    position: absolute;
-    pointer-events: none;
+.arrow_box:before,.arrow_box:after{
+    left: 50%; bottom: 100%; border:solid transparent;
+    height: 0; width: 0; border-width: 30px; content: ' ';
+    position: absolute; pointer-events: none;
 }
-
 .arrow_box:after {
-    border-color: rgba(136, 183, 213, 0);
-    border-bottom-color: #88b7d5;
+    /*border-color: rgba(136, 183, 213, 0);*/
+    border-bottom-color:#CDD8E4;
     border-width: 30px;
     margin-left: -30px;
 }
 .arrow_box:before {
-    border-color: rgba(194, 225, 245, 0);
-    border-bottom-color: #c2e1f5;
+    /*border-color: rgba(194, 225, 245, 0);*/
+    border-bottom-color: #204d74;
     border-width: 36px;
     margin-left: -36px;
+}
+.changevalue{
+    width: 500px; margin: 0 auto; margin-top: 30px;
+}
+.changevalue_left{
+    float: left;
+}
+.changevalue_right{
+    float: right;
+}
+.changevalue_left li{
+    line-height: 25px; margin-left: 10px;
+}
+.changevalue_right label{
+    width: 130px; display: inline-block;
+}
+.changevalue_right input[type='text']{
+    width: 50px; padding: 3px;  -webkit-border-radius: 5px;  -moz-border-radius: 5px;
+    border-radius: 5px; color: #000000;
+}
+.changevalue_right li{
+    line-height: 31px;
 }
